--- a/csp/src/app/clientes/clientes-form/clientes-form.component.html
+++ b/csp/src/app/clientes/clientes-form/clientes-form.component.html
@@ -51,6 +51,9 @@
       <button type="submit" class="btn btn-success" (click)="onSubmit()">
         <i class="fa fa-save"></i> Salvar
       </button>
+      <button type="submit" class="btn btn-success" (click)="onSubmit()">
+        <i class="fa fa-save"></i> Teste
+      </button>
     </div>
   </form>
 </div>
