--- a/csp/src/app/clientes/clientes-form/clientes-form.component.html
+++ b/csp/src/app/clientes/clientes-form/clientes-form.component.html
@@ -11,6 +11,11 @@
         <div class="alert alert-success" role="alert" *ngIf="success == true">
           Cliente salvo/atualizado com sucesso!
         </div>
+      <div class="col-md-12">
+        <div class="alert alert-danger" role="alert" *ngFor="let error of errors">
+          {{ error }}
+          Cliente salvo/atualizado com sucesso!
+        </div>
       </div>
     </div>
     <div class="row">
@@ -52,5 +57,4 @@
         <i class="fa fa-save"></i> Salvar
       </button>
     </div>
-  </form>
 </div>
