--- a/csp/src/app/clientes/clientes-form/clientes-form.component.html
+++ b/csp/src/app/clientes/clientes-form/clientes-form.component.html
@@ -11,6 +11,9 @@
         <div class="alert alert-success" role="alert" *ngIf="success == true">
           Cliente salvo/atualizado com sucesso!
         </div>
+        <div class="alert alert-danger" role="alert" *ngFor="let erro of errors">
+          {{ erro }}
+        </div>
       </div>
     </div>
     <div class="row">
