Teste banco de dados em casa

--- a/csp/src/app/clientes/clientes-form/clientes-form.component.html
+++ b/csp/src/app/clientes/clientes-form/clientes-form.component.html
@@ -2,13 +2,24 @@
 <ol class="breadcrumb mb-4">
   <li class="breadcrumb-item active">Cadastro</li>
 </ol>
+
 <div class="container">
-  <form>
-    <div class="row">
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="alert alert-success" role="alert" *ngIf="success == true">
+        Cliente salvo/atualizado com sucesso!
+    </div>
+
+      <div class="alert alert-danger" role="alert" *ngFor="let erro of errors">
+       {{ erro }}
+      </div>
+  </div>
+
       <div class="col-md-6">
         <div class="form-group">
           <label>ID:</label>
-          <input type="text"  [ngModel]="cliente.id" name="id" class="form-control"    />
+          <input type="text"  [ngModel]="cliente.id" name="id" class="form-control"  disabled="true"   />
         </div>
       </div>
 
@@ -19,8 +30,8 @@
                 [ngModel]="cliente.dataCadastro" disabled="true" />
         </div>
       </div>
-
     </div>
+
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
@@ -37,16 +48,16 @@
                 [(ngModel)]="cliente.cpf" name="cpf" />
         </div>
       </div>
-
     </div>
 
     <div class="row">
-      <div class="col md 2">
-        <button type="submit" class="btn btn-success" (click)="clicar()" >
+      <div class="col md 3">
+        <button type="submit" class="btn btn-success" *ngIf="!cliente.id" >
           <i class="fa fa-save" ></i> Salvar
         </button>
+
+
       </div>
     </div>
 
-  </form>
 </div>
